bitkeeper revision 1.1159.1.107 (412dfaebCIngUElp8LanU3kSkz3C7Q)
Grant-table skeleton in Xen/Linux.

--- a/linux-2.6.7-xen-sparse/arch/xen/kernel/Makefile
+++ b/linux-2.6.7-xen-sparse/arch/xen/kernel/Makefile
@@ -9,4 +9,5 @@ $(obj)/vmlinux.lds.s: arch/$(ARCH)/$(XENARCH)/kernel/vmlinux.lds.s
 
 extra-y += vmlinux.lds.s
 
-obj-y	:= ctrl_if.o evtchn.o fixup.o process.o reboot.o xen_proc.o empty.o
+obj-y	:= ctrl_if.o evtchn.o fixup.o process.o reboot.o xen_proc.o empty.o \
+           gnttab.o
