bitkeeper revision 1.1159.53.7 (412f0ab5oS0qMRsN8oxi1yN_HDC1Ew)
Prevent vmlinux.lds.s getting built with incorrect arguments (missing -Ui386).

--- a/linux-2.6.8.1-xen-sparse/arch/xen/kernel/Makefile
+++ b/linux-2.6.8.1-xen-sparse/arch/xen/kernel/Makefile
@@ -4,7 +4,7 @@
 
 XENARCH	:= $(subst ",,$(CONFIG_XENARCH))
 
-$(obj)/vmlinux.lds.s: arch/$(ARCH)/$(XENARCH)/kernel/vmlinux.lds.s
+$(obj)/vmlinux.lds.s:
 	@ln -fsn $(srctree)/arch/$(ARCH)/$(XENARCH)/kernel/vmlinux.lds.s $@
 
 extra-y += vmlinux.lds.s
