bitkeeper revision 1.1159.60.1 (412f533e1b2O_B8bnbDfqpz-zNyv3w)
Enable Linux 2.6 to use Xen's writable pagetable interface by default.
If you experience weird crashes, try disabling this option.

--- a/linux-2.6.8.1-xen-sparse/arch/xen/configs/xenU_defconfig
+++ b/linux-2.6.8.1-xen-sparse/arch/xen/configs/xenU_defconfig
@@ -10,7 +10,7 @@ CONFIG_NO_IDLE_HZ=y
 #
 # CONFIG_XEN_PRIVILEGED_GUEST is not set
 # CONFIG_XEN_PHYSDEV_ACCESS is not set
-# CONFIG_XEN_WRITABLE_PAGETABLES is not set
+CONFIG_XEN_WRITABLE_PAGETABLES=y
 # CONFIG_FOREIGN_PAGES is not set
 # CONFIG_PAGESIZED_SKBS is not set
 CONFIG_X86=y
