--- a/linux-2.6.8.1-xen-sparse/arch/xen/configs/xen0_defconfig
+++ b/linux-2.6.8.1-xen-sparse/arch/xen/configs/xen0_defconfig
@@ -10,7 +10,7 @@ CONFIG_NO_IDLE_HZ=y
 #
 CONFIG_XEN_PRIVILEGED_GUEST=y
 CONFIG_XEN_PHYSDEV_ACCESS=y
-# CONFIG_XEN_WRITABLE_PAGETABLES is not set
+CONFIG_XEN_WRITABLE_PAGETABLES=y
 CONFIG_FOREIGN_PAGES=y
 CONFIG_PAGESIZED_SKBS=y
 CONFIG_X86=y
