bitkeeper revision 1.1159.1.141 (413f74fcTwJtxfSqPOLD17o7tsdJbg)
Freed PTEs now pass through the TLB-gathering mechanism, as is correct.
We hook them back off into the pte caching allocator using the
SetForeignHeap() mechanism that I added for the network backend.

--- a/linux-2.6.8.1-xen-sparse/arch/xen/Kconfig
+++ b/linux-2.6.8.1-xen-sparse/arch/xen/Kconfig
@@ -45,8 +45,7 @@ endmenu
 
 config FOREIGN_PAGES
 	bool
-	default y if XEN_PHYSDEV_ACCESS
-	default n if !XEN_PHYSDEV_ACCESS
+	default y
 
 config PAGESIZED_SKBS
 	bool
