--- a/linux-2.6.8.1-xen-sparse/arch/xen/configs/xenU_defconfig
+++ b/linux-2.6.8.1-xen-sparse/arch/xen/configs/xenU_defconfig
@@ -11,7 +11,7 @@ CONFIG_NO_IDLE_HZ=y
 # CONFIG_XEN_PRIVILEGED_GUEST is not set
 # CONFIG_XEN_PHYSDEV_ACCESS is not set
 CONFIG_XEN_WRITABLE_PAGETABLES=y
-# CONFIG_FOREIGN_PAGES is not set
+CONFIG_FOREIGN_PAGES=y
 # CONFIG_PAGESIZED_SKBS is not set
 CONFIG_X86=y
 # CONFIG_X86_64 is not set
