--- a/linux-2.6.8.1-xen-sparse/arch/xen/configs/xenU_defconfig
+++ b/linux-2.6.8.1-xen-sparse/arch/xen/configs/xenU_defconfig
@@ -10,6 +10,11 @@ CONFIG_NO_IDLE_HZ=y
 #
 # CONFIG_XEN_PRIVILEGED_GUEST is not set
 # CONFIG_XEN_PHYSDEV_ACCESS is not set
+# CONFIG_XEN_BLKDEV_BACKEND is not set
+# CONFIG_XEN_NETDEV_BACKEND is not set
+CONFIG_XEN_BLKDEV_FRONTEND=y
+CONFIG_XEN_NETDEV_FRONTEND=y
+# CONFIG_XEN_NETDEV_FRONTEND_PIPELINED_TRANSMITTER is not set
 CONFIG_XEN_WRITABLE_PAGETABLES=y
 CONFIG_FOREIGN_PAGES=y
 # CONFIG_PAGESIZED_SKBS is not set
